Update Simulation.java